# battnux

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  battery_info.rs  config.example.toml
.github/workflows/: build.yml  ci.yml  deps.yml
src/: audio.rs  battery_info.rs  cli.rs  config.rs  display.rs  logger.rs  main.rs  monitor.rs  notifier.rs  stats.rs  threshold.rs  web.rs
