bin = [
    { name = "battnux", path = "src/main.rs" },
]

[package]
name = "battnux"
version = "0.1.4"
edition = "2021"
authors = [
    "Hadi Cahyadi <cumulus13@gmail.com>",
]
description = "Robust terminal battery monitor with statistics, logging, and colored output for Linux (and cross-platform support)"
homepage = "https://github.com/cumulus13/battnux"
repository = "https://github.com/cumulus13/battnux"
license = "MIT"
keywords = [
    "battery",
    "linux",
    "cli",
    "monitor",
    "sysinfo",
]
categories = [
    "command-line-utilities",
    "hardware-support",
]
readme = "README.md"

[dependencies]
colored = "2"
battery = "0.7"
serde_json = "1"
dirs = "5"
terminal_size = "0.3"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dependencies.clap]
version = "4"
features = [
    "derive",
    "color",
    "env",
]

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
