[package]
name = "battnux"
version = "0.1.8"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "Robust terminal battery monitor with monitor mode, statistics, Growl notifications, audio alerts, and web dashboard"
homepage = "https://github.com/cumulus13/battnux"
repository = "https://github.com/cumulus13/battnux"
license = "MIT"
keywords = ["battery", "linux", "monitor", "growl", "notifications"]
categories = ["command-line-utilities", "hardware-support"]
readme = "README.md"
exclude = ["assets/*", ".github/*"]

[[bin]]
name = "battnux"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "color", "env"] }

# Colored terminal output
colored = "2"

# Cross-platform battery info (Linux/macOS/Windows)
battery = "0.7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Serialization: log persistence, JSON output, TOML config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# XDG platform directories
dirs = "5"

# Terminal width detection
terminal_size = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Growl / GNTP desktop notifications
gntp = "0.1.11"

# Audio playback for threshold alerts (wav/mp3/ogg)
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3", "vorbis"] }

# Async runtime for web dashboard
tokio = { version = "1", features = ["full"] }

# Web dashboard
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"

# Thread-safe shared state (no std::sync::Mutex overhead)
parking_lot = "0.12"

# Smooth terminal monitor mode (alternate screen, cursor control)
crossterm = { version = "0.27", features = ["event-stream"] }

# Ctrl-C signal handling
ctrlc = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
